Fix grouped title and body alignment

--- a/less/toc.less
+++ b/less/toc.less
@@ -12,8 +12,9 @@
 // --------------------------------------------------
 .toc__group-item .toc__group {
   .toc__group-item-title,
-  .toc__item-title-inner {
-    text-indent: 1rem;
+  .toc__item-title-inner,
+  .toc__item-body-inner {
+    padding-inline-start: 1rem;
   }
 }
 
